Atualizer o hover nos botoes de criar e entrar no login

--- a/telaLogin1.html
+++ b/telaLogin1.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste if</title>
 
-    <link rel="stylesheet" href="script2-if.css">
+    <link rel="stylesheet" href="src/style/style.css">
 </head>
 
 <body>
     <nav>
-        <button onclick="aparecer()">criar conta</button>
-        <button ><a href="../../../MeusPrj/PrjLogin2/index.html">Entrar</a></button>
+        <button onclick="aparecer()" id="criar_conta">criar conta</button>
+        <button id="entrar_conta">Entrar</button>
     </nav>
 
     <div class="imagem-tela">
