--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste if</title>
+    <title>Tela de Cadastro</title>
 
     <link rel="stylesheet" href="src/style/style.css">
 </head>
@@ -49,6 +49,10 @@
             </section>
             <button onclick="desaparecerFormulario()" class="send-input" type="submit">Enviar Cadastro</button>
         </form>
+    </div>
+
+    <div class="feitoPor">
+        <h2>Edinel Mário Adelso</h2>
     </div>
 </body>
 <script>
